TAP5-2700: fixing two broken tests
GridSymbolDemoTests and XMLTokenStreamTests. testStreamEncoding